--- a/src/app/shared/ui/sidebar/sidebar.component.html
+++ b/src/app/shared/ui/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<aside class="w-64 h-full bg-white border-r border-zinc-200 flex flex-col">
+<aside class="w-64 md:w-64 h-full md:h-svh md:sticky md:top-0 bg-white border-r border-zinc-200 flex flex-col pb-4">
   <div class="p-4 font-semibold">Menú</div>
 
   <nav class="px-2 space-y-1 flex-1 overflow-auto">
