--- a/src/app/features/clientes/clientes.page.html
+++ b/src/app/features/clientes/clientes.page.html
@@ -31,7 +31,7 @@
     <div class="flex gap-2">
       <button
         type="button"
-        class="btn-outline w-full"
+        class="btn btn--primary btn--md w-full"
         [class.btn]="view()==='list'"
         [class.btn-outline]="view()!=='list'"
         (click)="setView('list')"
