--- a/src/app/shared/ui/topbar/topbar.component.html
+++ b/src/app/shared/ui/topbar/topbar.component.html
@@ -1,7 +1,7 @@
-<header class="h-14 uq-topbar border-b flex items-center sticky top-0 z-10">
+<header class="h-14 uq-topbar border-b flex items-center sticky top-0 z-10 bg-white">
   <div class="mx-auto w-full max-w-[1600px] px-4 flex items-center">
     <!-- Marca -->
-    <span class="font-semibold uq-brand">UNIQUOTE</span>
+    <span class="font-semibold uq-brand">Logo</span>
 
     <!-- Usuario -->
     <div class="ml-auto flex items-center gap-2">
