--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
 /* Tokens / variables */
 :root {
   --peach-25:  #FEF8F2;
-  --peach-50:  #FEF2E7;   /* fondo general suave */
+  --peach-50:  #FFF4EA;   /* fondo general suave */
   --peach-75:  #FCF4EE;   /* hover sidebar */
   --peach-100: #FCF4EE;   /* active sidebar */
 
