--- a/src/app/shared/ui/sidebar/sidebar.component.html
+++ b/src/app/shared/ui/sidebar/sidebar.component.html
@@ -1,20 +1,21 @@
-<aside class="w-64 h-full bg-white border-r border-zinc-200 flex flex-col pb-4">
-  <div class="p-4 font-semibold">Menú</div>
+<aside class="w-64 h-full bg-white border-r border-zinc-200 flex flex-col">
 
-  <nav class="px-2 space-y-1 flex-1 overflow-auto">
-    <a *ngFor="let item of menu()"
-       [routerLink]="item.path"
-       routerLinkActive="bg-[var(--peach-75)] font-semibold !text-[color:var(--accent-600)]"
-       [routerLinkActiveOptions]="{ exact: true }"
-       class="block px-4 py-2 rounded-md hover:bg-[var(--peach-75)] text-zinc-800">
-      {{ item.label }}
+  <nav class="px-3 py-4 flex-1 overflow-auto space-y-1">
+    <a
+      *ngFor="let item of menu()"
+      [routerLink]="item.path"
+      routerLinkActive="active-link"
+      [routerLinkActiveOptions]="{ exact: true }"
+      class="menu-link group"
+    >
+      <lucide-angular
+        [name]="item.icon"
+        class="w-5 h-5 text-zinc-600 transition"
+      ></lucide-angular>
+
+      <span class="text-sm transition">{{ item.label }}</span>
     </a>
+
   </nav>
 
-  <div class="p-3 border-t border-zinc-200">
-    <button (click)="logout()"
-            class="w-full px-3 py-2 rounded-full bg-[var(--accent-600)] text-white hover:opacity-90">
-      Cerrar sesión
-    </button>
-  </div>
 </aside>
