--- a/src/app/shared/ui/sidebar/sidebar.component.html
+++ b/src/app/shared/ui/sidebar/sidebar.component.html
@@ -6,15 +6,16 @@
       [routerLink]="item.path"
       routerLinkActive="active-link"
       [routerLinkActiveOptions]="{ exact: true }"
-      class="menu-link group"
+      class="menu-link group flex items-center gap-3 px-3 py-2 w-full rounded-lg transition-colors cursor-pointer"
     >
       <lucide-angular
         [name]="item.icon"
-        class="w-5 h-5 text-zinc-600 transition"
+        class="icon w-5 h-5 text-zinc-600 transition-colors"
       ></lucide-angular>
 
-      <span class="text-sm transition">{{ item.label }}</span>
+      <span class="label text-sm transition-colors">{{ item.label }}</span>
     </a>
+
 
   </nav>
 
