--- a/src/app/layout/app-shell.component.html
+++ b/src/app/layout/app-shell.component.html
@@ -4,15 +4,30 @@
   (openDrawer)="toggleDrawer()">
 </app-topbar>
 
-<!-- Sidebar fija (solo ≥ md) -->
-<div class="hidden md:block fixed left-0 top-14 z-30 w-64 h-[calc(100svh-3.5rem)] bg-white border-r border-zinc-200">
+<!-- Sidebar fija -->
+<div 
+  *ngIf="!shouldHideSidebar()"
+  class="hidden md:block fixed left-0 top-14 z-30 w-64 h-[calc(100svh-3.5rem)] bg-white border-r border-zinc-200"
+>
   <app-sidebar></app-sidebar>
 </div>
 
-<!-- Contenido -->
-<div class="pt-14 md:pl-64">
-  <div class="mx-auto px-4 md:px-6 max-w-[1600px] bg-white">
-    <main class="min-h-[calc(100svh-3.5rem)] pb-10">
+<!-- CONTENIDO PRINCIPAL -->
+<div 
+  class="pt-14 min-h-[calc(100svh-3.5rem)]"
+  [ngClass]="{
+    'md:pl-64 bg-white': !shouldHideSidebar(),
+    'bg-[var(--bg-main)]': shouldHideSidebar()
+  }"
+>
+  <div 
+    class="mx-auto px-4 md:px-6"
+    [ngClass]="{
+      'max-w-[1600px]': !shouldHideSidebar(),
+      'max-w-[900px]': shouldHideSidebar()
+    }"
+  >
+    <main class="pb-10">
       <router-outlet></router-outlet>
     </main>
   </div>
@@ -20,16 +35,13 @@
 
 <!-- Drawer móvil -->
 <div *ngIf="open()" class="fixed inset-0 z-40 md:hidden">
-
-  <!-- Backdrop (toca afuera para cerrar) -->
   <div class="absolute inset-0 bg-black/40" (click)="closeDrawer()"></div>
 
-  <!-- Panel lateral -->
   <div
+    *ngIf="!shouldHideSidebar()"
     class="absolute left-0 top-0 h-full w-72 bg-white shadow-xl 
            animate-slide-right overflow-y-auto"
   >
     <app-sidebar></app-sidebar>
   </div>
-
 </div>
